--- a/about.html
+++ b/about.html
@@ -24,5 +24,8 @@
                 </nav>
             </div>
         </header>
+        <div class="aboutme">
+            <p> Hi, my name is X1001. OVERKILL is my personal project. I design miniatures, sculptures, keycaps and other things.</p>
+        </div>
     </body>
 </html>
