--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
         </header>
         
         <div class="slides">
-        <img id="image1" src="img/sample1.JPG"alt="Sample Image 1" width="500" style="transform:rotate(90deg); float:left; margin-top:130px; padding-left: 130px;">
-        <img id="image2" src="img/sample2.JPG"alt="Sample Image 2" width="500" style="transform:rotate(90deg);float:left; margin-top:130px;padding-left: 130px; ">
-        <img id="image3" src="img/sample3.JPG"alt="Sample Image 3" width="500" style="transform:rotate(90deg);float:left; margin-top:130px;padding-left: 130px; ">
+        <img id="image1" src="img/sample1.JPG"alt="Sample Image 1" width="500" float:left; margin-top:130px; padding-left: 130px;">
+        <img id="image2" src="img/sample2.JPG"alt="Sample Image 2" width="500" float:left; margin-top:130px;padding-left: 130px; ">
+        <img id="image3" src="img/sample3.JPG"alt="Sample Image 3" width="500" float:left; margin-top:130px;padding-left: 130px; ">
         </div>
         
     </body>
