--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <nav>
                     <ul>
                     <li><a href = "index.html"><img src="img/homeblue.png"></a></li>
-                    <li><a href = "about.html"><img src="img/about.png"></a></li>
+                    <li><a href = "about.html"><img ></a></li>
                     <li><a href = "works.html"><img src="img/works.png"></a></li>
                     
                             
