--- a/about.html
+++ b/about.html
@@ -24,6 +24,7 @@
                 </nav>
             </div>
         </header>
+        <img src="img/whole-01.png"width=50% style="margin-top:2%; margin-left: 20%;">
         <div class="aboutme">
             <p> Hi, my name is X1001. OVERKILL is my personal project. I design miniatures, sculptures, keycaps and other things.</p>
         </div>
