--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <img id="image1" src="img/samplo1.png"alt="Sample Image 1" width="20%" style="float:left; margin-top:10%; padding-left: 10%">
         <img id="image2" src="img/samplo2.png"alt="Sample Image 2" width="20%" style="float:left; margin-top:10%;padding-left: 10% ">
         <img id="image3" src="img/samplo3.png"alt="Sample Image 3" width="20%" style="float:left; margin-top:10%;padding-left: 10%">
-        <img id="image3" src="img/samplo4.png"alt="Sample Image 3" width="20%" style="float:left; margin-top:10%;padding-left: 10%">
+        <!--<img id="image4" src="img/samplo4.png"alt="Sample Image 3" width="20%" style="float:left; margin-top:10%;padding-left: 10%">-->
         
         </div>
 
