--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 
     <div id = "bm"></div>
     <!-- Scripts -->
-    <script src="scripts/lottie.js"></script>
-    <script src="scripts/index.js"></script>
+    <script src="lottie.js"></script>
+    <script src="index.js"></script>
 </body>
 </html>
 
