--- a/index.html
+++ b/index.html
@@ -14,5 +14,7 @@
     <script src="lottie.js"></script>
     <script src="index.js"></script>
 </body>
+<p>meanwhile <strong>INstagram</strong>and<strong>Reddit</strong></p>
 </html>
+
 
