--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Bodymovin Demo</title>
 
     <link rel="stylesheet">
-    
+    <script src="https://kit.fontawesome.com/4dc494be8a.js" crossorigin="anonymous"></script>
 </head>
 <body>
 
@@ -14,7 +14,8 @@
     <script src="lottie.js"></script>
     <script src="index.js"></script>
 
-    <p>meanwhile <strong>INstagram</strong>and<strong>Reddit</strong></p>
+    <i class="fab fa-instagram"></i>
+    <i class="fab fa-reddit"></i>
 </body>
 
 </html>
