--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <script src="lottie.js"></script>
     <script src="index.js"></script>
 
-    <i class="fab fa-instagram"></i>
-    <i class="fab fa-reddit"></i>
+    <a href="https://www.instagram.com/0v3r_k1ll/"><i class="fab fa-instagram"></i></a>
+    <a href="https://www.reddit.com/user/lu0101"><i class="fab fa-reddit"></i></a>
 </body>
 
 </html>
