--- a/index.html
+++ b/index.html
@@ -2,12 +2,19 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8" />
-    <title>Bodymovin Demo</title>
+    <title>OVERKILL</title>
 
-    <link rel="stylesheet">
+    <link rel="stylesheet" href="main.css">
     <script src="https://kit.fontawesome.com/4dc494be8a.js" crossorigin="anonymous"></script>
 </head>
 <body>
+
+    <div class="preload">
+        <div id="rotateanim"></div>
+        
+        <script src ="lottie.js"></script>
+        <script src ="indexpreload.js"></script>
+    </div>
 
     <div id = "bm"></div>
     <!-- Scripts -->
