--- a/index.html
+++ b/index.html
@@ -9,21 +9,21 @@
 </head>
 <body>
 
-    <div class="preload">
-        <div id="rotateanim"></div>
-        
-        <script src ="lottie.js"></script>
-        <script src ="indexpreload.js"></script>
-    </div>
-
+   
     <div id = "bm"></div>
     <!-- Scripts -->
     <script src="lottie.js"></script>
     <script src="index.js"></script>
-
-    <a href="https://www.instagram.com/0v3r_k1ll/"><i class="fab fa-instagram"></i></a>
-    <a href="https://www.reddit.com/user/lu0101"><i class="fab fa-reddit"></i></a>
+    <section id = "boxes">
+        <div class="instagram" style="font-size: 28px;">
+        <a href="https://www.instagram.com/0v3r_k1ll/"><i class="fab fa-instagram"></i></a>
+    </div>
+    <div class="reddit" style="font-size: 28px;">
+       <a href="https://www.reddit.com/user/lu0101"><i class="fab fa-reddit"></i></a>
+    </div>
+</section>
 </body>
+
 
 </html>
 
