--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <script src="lottie.js"></script>
     <script src="index.js"></script>
     <section id = "boxes">
-        <div class="instagram" style="font-size: 28px;">
+        <div class="instagram" style="font-size: 28px">
         <a href="https://www.instagram.com/0v3r_k1ll/"><i class="fab fa-instagram"></i></a>
     </div>
     <div class="reddit" style="font-size: 28px;">
