--- a/index.html
+++ b/index.html
@@ -1,30 +1,169 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8" />
-    <title>OVERKILL</title>
+  <head>
+    <title>Bodymovin demo</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div id="bm"></div>
+    <div class="shop">
+      <a href="shop.html"
+        ><?xml version="1.0" encoding="utf-8"?>
+        <!-- Generator: Adobe Illustrator 21.1.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
+        <svg
+          version="1.1"
+          id="Layer_1"
+          xmlns="http://www.w3.org/2000/svg"
+          xmlns:xlink="http://www.w3.org/1999/xlink"
+          x="0px"
+          y="0px"
+          viewBox="0 0 128 37"
+          style="enable-background: new 0 0 128 37"
+          xml:space="preserve"
+        >
+          <style type="text/css">
+            .st0 {
+              fill: #0000ff;
+            }
+          </style>
+          <path class="st0" d="M46.8,6" />
+          <g>
+            <circle class="st0" cx="54.8" cy="21.6" r="5.4" />
+          </g>
+          <path class="st0" d="M119.5,21.1" />
+          <polygon
+            points="14.4,13.2 13.3,18.5 16.5,18.5 11.2,25 12.2,20.7 9,20.7 "
+          />
+          <path class="st0" d="M8.5,15.2" />
+          <path class="st0" d="M13.9,20.5" />
+          <circle cx="79.7" cy="18" r="9.7" />
+          <polygon
+            points="43.9,27.7 63.2,27.7 63.2,27.4 59.6,18 63.2,8.6 63.2,8.3 43.8,8.3 43.8,8.4 47.5,18 "
+          />
+          <polygon
+            points="114.6,8.7 95.2,8.7 95.2,28.1 110.9,28.1 110.9,18.4 "
+          />
+          <g>
+            <path
+              d="M37.1,12.3c-0.3-1.1-0.9-2-1.9-2.7c-0.9-0.7-2-1.1-3.2-1.4c-1.2-0.2-2.4-0.2-3.6,0c-1.3,0.2-2.3,0.7-3.2,1.3
+                  c-0.4,0.3-0.8,0.6-1.1,1c-0.3,0.4-0.6,0.8-0.7,1.3c-0.3,0.9-0.3,1.9,0.1,3c0.5,1.1,1.7,2.1,3.6,2.9l5.6,1.6
+                  c1.2,0.3,2.2,0.8,2.9,1.4c0.7,0.6,1.2,1.3,1.6,2.1c0.3,0.8,0.3,1.7,0,2.6c-0.3,0.9-0.9,1.6-1.8,2.3c-0.8,0.6-1.9,1.1-3.2,1.3
+                  c-1.2,0.2-2.4,0.2-3.6,0c-1.2-0.2-2.3-0.7-3.2-1.4c-0.9-0.6-1.5-1.3-1.8-2.1l-0.7-1.6L37.1,12.3z"
+            />
+          </g>
+        </svg>
+      </a>
+    </div>
+    <div class="about">
+      <a href="about.html"
+        ><?xml version="1.0" encoding="utf-8"?>
+        <!-- Generator: Adobe Illustrator 21.1.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
+        <svg
+          version="1.1"
+          id="Layer_1"
+          xmlns="http://www.w3.org/2000/svg"
+          xmlns:xlink="http://www.w3.org/1999/xlink"
+          x="0px"
+          y="0px"
+          viewBox="0 0 149 31"
+          style="enable-background: new 0 0 149 31"
+          xml:space="preserve"
+        >
+          <style type="text/css">
+            .st0 {
+              fill: #050505;
+            }
+          </style>
+          <g>
+            <polygon class="st0" points="38,26 27.8,5.5 17.6,26 	" />
+          </g>
+          <g>
+            <rect x="43.8" y="5.5" class="st0" width="15.1" height="20.5" />
+          </g>
+          <path class="st0" d="M50.8,5" />
+          <g>
+            <circle class="st0" cx="58.8" cy="20.6" r="5.4" />
+          </g>
+          <g>
+            <circle class="st0" cx="58.8" cy="10.9" r="5.4" />
+          </g>
+          <g>
+            <circle class="st0" cx="79.5" cy="15.6" r="10.2" />
+          </g>
+          <g>
+            <path
+              class="st0"
+              d="M115.5,5.5H95.2v10.2c0,0,0,0,0,0s0,0,0,0v0.6h0c0.3,5.2,4.7,9.4,10.1,9.4c5.4,0,9.8-4.1,10.1-9.4h0V5.5z"
+            />
+          </g>
+          <g>
+            <polygon
+              class="st0"
+              points="121.3,19.9 123.5,19.9 123.5,26 139.1,26 139.1,22.1 141.4,22.1 141.4,5.5 121,5.5 121,19.9 	"
+            />
+          </g>
+          <path class="st0" d="M123.5,20.1" />
+          <polygon
+            class="st0"
+            points="10.4,14.2 9.3,19.5 12.5,19.5 7.2,26 8.2,21.7 5,21.7 "
+          />
+          <path class="st0" d="M12.5,14.2" />
+          <path class="st0" d="M17.9,19.5" />
+        </svg>
+      </a>
+    </div>
+    <div class="work">
+      <a href="contact.html">
+        <?xml version="1.0" encoding="utf-8"?>
+        <!-- Generator: Adobe Illustrator 21.1.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
+        <svg
+          version="1.1"
+          id="Layer_1"
+          xmlns="http://www.w3.org/2000/svg"
+          xmlns:xlink="http://www.w3.org/1999/xlink"
+          x="0px"
+          y="0px"
+          viewBox="0 0 196 27"
+          style="enable-background: new 0 0 196 27"
+          xml:space="preserve"
+        >
+          <g>
+            <circle cx="51.5" cy="13.5" r="10.5" />
+          </g>
+          <g>
+            <polygon
+              points="94.8,17.8 97,17.8 97,24 113,24 113,20 115.4,20 115.4,3 94.5,3 94.5,17.8 	"
+            />
+          </g>
+          <path d="M95.5,18.1" />
+          <polygon
+            points="10.4,9.2 9.3,14.5 12.5,14.5 7.2,21 8.2,16.7 5,16.7 "
+          />
+          <path d="M8.5,12.2" />
+          <path d="M13.9,17.5" />
+          <polygon
+            points="80.1,3 80.1,4.8 78.9,3 68,3 68,24 74.9,24 74.9,22.3 76,24 89,24 89,3 "
+          />
+          <path
+            d="M27,3L27,3c-5.6,0.3-10,4.9-10,10.5c0,5.6,4.4,10.2,10,10.5v0h7V3H27z"
+          />
+          <polygon points="121,24 131,3 142,24 " />
+          <path
+            d="M155,3L155,3c-5.6,0.3-10,4.9-10,10.5c0,5.6,4.4,10.2,10,10.5v0h7V3H155z"
+          />
+          <g>
+            <polygon
+              points="168.8,17.8 171,17.8 171,24 187,24 187,20 189.4,20 189.4,3 168.5,3 168.5,17.8 	"
+            />
+          </g>
+        </svg>
+      </a>
+    </div>
+    <div class="mothership">
+      <a href="https://x-1001.github.io/"><img src="mothership.jpg" /></a>
+    </div>
 
-    <link rel="stylesheet" href="main.css">
-    <script src="https://kit.fontawesome.com/4dc494be8a.js" crossorigin="anonymous"></script>
-</head>
-<body>
-
-   
-    <div id = "bm"></div>
-    <!-- Scripts -->
     <script src="lottie.js"></script>
     <script src="index.js"></script>
-    <section id = "boxes">
-        <div class="instagram" style="font-size: 28px">
-        <a href="https://www.instagram.com/0v3r_k1ll/"><i class="fab fa-instagram"></i></a>
-    </div>
-    <div class="reddit" style="font-size: 28px;">
-       <a href="https://www.reddit.com/user/lu0101"><i class="fab fa-reddit"></i></a>
-    </div>
-</section>
-</body>
-
-
+  </body>
 </html>
-
-
