--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Bodymovin demo</title>
+    <title>0VERKILL</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
