dodat_hover_efekat

--- a/fthesystem.html
+++ b/fthesystem.html
@@ -26,6 +26,11 @@
         margin-top: 22%;
         margin-left: 6%;
       }
+      .button:hover {
+        transform: scale(1.2);
+        -webkit-transform: scale(1.2);
+        -ms-transform: scale(1.2);
+      }
       /*Media Queries*/
       @media (max-width: 1000px) {
         .section2 {
