media_query_shop_i_main

--- a/shop.html
+++ b/shop.html
@@ -29,6 +29,12 @@
         width: 100%;
         margin: auto;
       }
+      /*Media queries*/
+      @media (max-width: 1000px) {
+        .fthesystem {
+          width: 70%;
+        }
+      }
     </style>
   </head>
   <body>
