--- a/index.html
+++ b/index.html
@@ -89,17 +89,24 @@
         margin-left: 40;
       }
 
-      @media (max-width: 700px) {
+      @media (max-width: 1000px) {
         .part1 {
           margin-left: auto;
           margin-right: auto;
+          width: 80%;
+        }
+        .drugideo {
+          margin-top: 200%;
         }
         .part2 {
-          display: none;
+          width: 60%;
+        }
+        .cetvrtideo {
+          margin-top: 148%;
         }
         .part3 {
-          margin-left: auto;
-          margin-right: auto;
+          margin-left: -35px;
+          width: 110%;
         }
       }
     </style>
