dodat_contact_dwarf_about_i_blog

--- a/index.html
+++ b/index.html
@@ -163,62 +163,70 @@
               </svg>
             </a>
           </div>
-          <div class="drugideo">
-            <?xml version="1.0" encoding="utf-8"?>
-            <!-- Generator: Adobe Illustrator 21.1.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
-            <svg
-              version="1.1"
-              id="Layer_1"
-              xmlns="http://www.w3.org/2000/svg"
-              xmlns:xlink="http://www.w3.org/1999/xlink"
-              x="0px"
-              y="0px"
-              viewBox="0 0 149 31"
-              style="enable-background: new 0 0 149 31"
-              xml:space="preserve"
-            >
-              <style type="text/css">
-                .st0 {
-                  fill: #050505;
-                }
-              </style>
-              <g>
-                <polygon class="st0" points="38,26 27.8,5.5 17.6,26 	" />
-              </g>
-              <g>
-                <rect x="43.8" y="5.5" class="st0" width="15.1" height="20.5" />
-              </g>
-              <path class="st0" d="M50.8,5" />
-              <g>
-                <circle class="st0" cx="58.8" cy="20.6" r="5.4" />
-              </g>
-              <g>
-                <circle class="st0" cx="58.8" cy="10.9" r="5.4" />
-              </g>
-              <g>
-                <circle class="st0" cx="79.5" cy="15.6" r="10.2" />
-              </g>
-              <g>
-                <path
-                  class="st0"
-                  d="M115.5,5.5H95.2v10.2c0,0,0,0,0,0s0,0,0,0v0.6h0c0.3,5.2,4.7,9.4,10.1,9.4c5.4,0,9.8-4.1,10.1-9.4h0V5.5z"
-                />
-              </g>
-              <g>
+          <a href="about.html">
+            <div class="drugideo">
+              <?xml version="1.0" encoding="utf-8"?>
+              <!-- Generator: Adobe Illustrator 21.1.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
+              <svg
+                version="1.1"
+                id="Layer_1"
+                xmlns="http://www.w3.org/2000/svg"
+                xmlns:xlink="http://www.w3.org/1999/xlink"
+                x="0px"
+                y="0px"
+                viewBox="0 0 149 31"
+                style="enable-background: new 0 0 149 31"
+                xml:space="preserve"
+              >
+                <style type="text/css">
+                  .st0 {
+                    fill: #050505;
+                  }
+                </style>
+                <g>
+                  <polygon class="st0" points="38,26 27.8,5.5 17.6,26 	" />
+                </g>
+                <g>
+                  <rect
+                    x="43.8"
+                    y="5.5"
+                    class="st0"
+                    width="15.1"
+                    height="20.5"
+                  />
+                </g>
+                <path class="st0" d="M50.8,5" />
+                <g>
+                  <circle class="st0" cx="58.8" cy="20.6" r="5.4" />
+                </g>
+                <g>
+                  <circle class="st0" cx="58.8" cy="10.9" r="5.4" />
+                </g>
+                <g>
+                  <circle class="st0" cx="79.5" cy="15.6" r="10.2" />
+                </g>
+                <g>
+                  <path
+                    class="st0"
+                    d="M115.5,5.5H95.2v10.2c0,0,0,0,0,0s0,0,0,0v0.6h0c0.3,5.2,4.7,9.4,10.1,9.4c5.4,0,9.8-4.1,10.1-9.4h0V5.5z"
+                  />
+                </g>
+                <g>
+                  <polygon
+                    class="st0"
+                    points="121.3,19.9 123.5,19.9 123.5,26 139.1,26 139.1,22.1 141.4,22.1 141.4,5.5 121,5.5 121,19.9 	"
+                  />
+                </g>
+                <path class="st0" d="M123.5,20.1" />
                 <polygon
                   class="st0"
-                  points="121.3,19.9 123.5,19.9 123.5,26 139.1,26 139.1,22.1 141.4,22.1 141.4,5.5 121,5.5 121,19.9 	"
+                  points="10.4,14.2 9.3,19.5 12.5,19.5 7.2,26 8.2,21.7 5,21.7 "
                 />
-              </g>
-              <path class="st0" d="M123.5,20.1" />
-              <polygon
-                class="st0"
-                points="10.4,14.2 9.3,19.5 12.5,19.5 7.2,26 8.2,21.7 5,21.7 "
-              />
-              <path class="st0" d="M12.5,14.2" />
-              <path class="st0" d="M17.9,19.5" />
-            </svg>
-          </div>
+                <path class="st0" d="M12.5,14.2" />
+                <path class="st0" d="M17.9,19.5" />
+              </svg>
+            </div>
+          </a>
         </div>
         <div class="part2">
           <?xml version="1.0" encoding="utf-8"?>
@@ -402,51 +410,54 @@
           </svg>
         </div>
         <div class="part3">
-          <div class="trecideo">
-            <?xml version="1.0" encoding="utf-8"?>
-            <!-- Generator: Adobe Illustrator 21.1.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
-            <svg
-              version="1.1"
-              id="Layer_1"
-              xmlns="http://www.w3.org/2000/svg"
-              xmlns:xlink="http://www.w3.org/1999/xlink"
-              x="0px"
-              y="0px"
-              viewBox="0 0 196 27"
-              style="enable-background: new 0 0 196 27"
-              xml:space="preserve"
-            >
-              <g>
-                <circle cx="51.5" cy="13.5" r="10.5" />
-              </g>
-              <g>
+          <a href="contact.html">
+            <div class="trecideo">
+              <?xml version="1.0" encoding="utf-8"?>
+              <!-- Generator: Adobe Illustrator 21.1.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
+              <svg
+                version="1.1"
+                id="Layer_1"
+                xmlns="http://www.w3.org/2000/svg"
+                xmlns:xlink="http://www.w3.org/1999/xlink"
+                x="0px"
+                y="0px"
+                viewBox="0 0 196 27"
+                style="enable-background: new 0 0 196 27"
+                xml:space="preserve"
+              >
+                <g>
+                  <circle cx="51.5" cy="13.5" r="10.5" />
+                </g>
+                <g>
+                  <polygon
+                    points="94.8,17.8 97,17.8 97,24 113,24 113,20 115.4,20 115.4,3 94.5,3 94.5,17.8 	"
+                  />
+                </g>
+                <path d="M95.5,18.1" />
                 <polygon
-                  points="94.8,17.8 97,17.8 97,24 113,24 113,20 115.4,20 115.4,3 94.5,3 94.5,17.8 	"
+                  points="10.4,9.2 9.3,14.5 12.5,14.5 7.2,21 8.2,16.7 5,16.7 "
                 />
-              </g>
-              <path d="M95.5,18.1" />
-              <polygon
-                points="10.4,9.2 9.3,14.5 12.5,14.5 7.2,21 8.2,16.7 5,16.7 "
-              />
-              <path d="M8.5,12.2" />
-              <path d="M13.9,17.5" />
-              <polygon
-                points="80.1,3 80.1,4.8 78.9,3 68,3 68,24 74.9,24 74.9,22.3 76,24 89,24 89,3 "
-              />
-              <path
-                d="M27,3L27,3c-5.6,0.3-10,4.9-10,10.5c0,5.6,4.4,10.2,10,10.5v0h7V3H27z"
-              />
-              <polygon points="121,24 131,3 142,24 " />
-              <path
-                d="M155,3L155,3c-5.6,0.3-10,4.9-10,10.5c0,5.6,4.4,10.2,10,10.5v0h7V3H155z"
-              />
-              <g>
+                <path d="M8.5,12.2" />
+                <path d="M13.9,17.5" />
                 <polygon
-                  points="168.8,17.8 171,17.8 171,24 187,24 187,20 189.4,20 189.4,3 168.5,3 168.5,17.8 	"
+                  points="80.1,3 80.1,4.8 78.9,3 68,3 68,24 74.9,24 74.9,22.3 76,24 89,24 89,3 "
                 />
-              </g>
-            </svg>
-          </div>
+                <path
+                  d="M27,3L27,3c-5.6,0.3-10,4.9-10,10.5c0,5.6,4.4,10.2,10,10.5v0h7V3H27z"
+                />
+                <polygon points="121,24 131,3 142,24 " />
+                <path
+                  d="M155,3L155,3c-5.6,0.3-10,4.9-10,10.5c0,5.6,4.4,10.2,10,10.5v0h7V3H155z"
+                />
+                <g>
+                  <polygon
+                    points="168.8,17.8 171,17.8 171,24 187,24 187,20 189.4,20 189.4,3 168.5,3 168.5,17.8 	"
+                  />
+                </g>
+              </svg>
+            </div>
+          </a>
+          <a href="blog.html">
           <div class="cetvrtideo">
             <?xml version="1.0" encoding="utf-8"?>
             <!-- Generator: Adobe Illustrator 21.1.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
@@ -510,6 +521,7 @@
                 />
               </g>
             </svg>
+          </a>
           </div>
         </div>
       </div>
