--- a/shop.html
+++ b/shop.html
@@ -29,6 +29,13 @@
         width: 100%;
         margin: auto;
       }
+      .dwarvenimage {
+        margin-top: 10%;
+      }
+      .dwarven_naslov {
+        width: 80%;
+        margin: auto;
+      }
       /*Media queries*/
       @media (max-width: 1000px) {
         .fthesystem {
@@ -703,6 +710,97 @@
 	c6.6,0,8.2,4.5,8.2,7.5C1148.7,105.8,1143.8,108.8,1140.5,108.8z M1150.3,112.1l1.6-8.2l3.3,8.2H1150.3z M1171.6,105
 	c0,1.6,0,4.7-6.9,4.7s-8.6-4.7-8.6-7.8s5.2-6.3,8.6-6.3c3.4,0,5.2,1.6,6.9,4.7C1171.6,100.3,1171.6,103.5,1171.6,105z"
               />
+            </svg>
+          </a>
+        </div>
+        <div class="dwarvenimage">
+          <a href="dwarven.html">
+            <img src="dwarves.jpg" />
+          </a>
+        </div>
+        <div class="dwarven_naslov">
+          <a href="dwarven.html">
+            <?xml version="1.0" encoding="utf-8"?>
+            <!-- Generator: Adobe Illustrator 21.1.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
+            <svg
+              version="1.1"
+              id="Layer_1"
+              xmlns="http://www.w3.org/2000/svg"
+              xmlns:xlink="http://www.w3.org/1999/xlink"
+              x="0px"
+              y="0px"
+              viewBox="0 0 798 157"
+              style="enable-background: new 0 0 798 157"
+              xml:space="preserve"
+            >
+              <g>
+                <path d="M625.5,19.9v1.2h-12v-1.2H625.5z" />
+                <path d="M637.5,19.9v1.2h-12v-1.2H637.5z" />
+                <path d="M32,28.9v24h-1.6v-24H32z" />
+                <path d="M45.8,47.9l-6.5-17.4h1.6l6.5,17.4H45.8z" />
+                <path d="M115,47.9l-6.5-17.4h1.6l6.5,17.4H115z" />
+                <path d="M208.2,47.9l6.7-17.4h1.6l-6.7,17.4H208.2z" />
+                <path d="M282.5,47.9l6.7-17.4h1.6l-6.7,17.4H282.5z" />
+                <path d="M302.4,47.9l-6.5-17.4h1.6l6.5,17.4H302.4z" />
+                <path d="M394.2,28.9v24h-1.6v-24H394.2z" />
+                <path d="M408,47.9l-6.5-17.4h1.6l6.5,17.4H408z" />
+                <path d="M477.2,47.9l-6.5-17.4h1.6l6.5,17.4H477.2z" />
+                <path d="M550,47.9l6.7-17.4h1.6l-6.7,17.4H550z" />
+                <path d="M612.8,28.9v24h-1.6v-24H612.8z" />
+                <path d="M715.2,28.9v24h-1.6v-24H715.2z" />
+                <path d="M723.9,47.9l-6.5-17.4h1.6l6.5,17.4H723.9z" />
+                <path d="M769.8,28.9v24h-1.6v-24H769.8z" />
+                <path d="M32,57.7v24h-1.6v-24H32z" />
+                <path d="M55.9,76.7l-6.5-17.4H51l6.5,17.4H55.9z" />
+                <path d="M125.2,76.7l-6.5-17.4h1.6l6.5,17.4H125.2z" />
+                <path d="M198,76.7l6.7-17.4h1.6l-6.7,17.4H198z" />
+                <path d="M272.4,76.7l6.7-17.4h1.6L274,76.7H272.4z" />
+                <path d="M307.5,76.7L301,59.3h1.6l6.5,17.4H307.5z" />
+                <path d="M394.2,57.7v24h-1.6v-24H394.2z" />
+                <path d="M401.3,76.7l6.7-17.4h1.6L403,76.7H401.3z" />
+                <path d="M487.4,76.7l-6.5-17.4h1.6l6.5,17.4H487.4z" />
+                <path d="M534.8,76.7l6.7-17.4h1.6l-6.7,17.4H534.8z" />
+                <path d="M612.9,57.7v24h-1.6v-24H612.9z" />
+                <path d="M626.9,77.5v1.2h-12v-1.2H626.9z" />
+                <path d="M638.9,77.5v1.2h-12v-1.2H638.9z" />
+                <path d="M713.8,57.7v24h-1.6v-24H713.8z" />
+                <path d="M737.7,76.7l-6.5-17.4h1.6l6.5,17.4H737.7z" />
+                <path d="M768.4,57.7v24h-1.6v-24H768.4z" />
+                <path d="M32,86.5v24h-1.6v-24H32z" />
+                <path d="M49.3,105.5L56,88.1h1.6l-6.7,17.4H49.3z" />
+                <path d="M135.4,105.5l-6.5-17.4h1.6l6.5,17.4H135.4z" />
+                <path d="M157.3,105.5l6.7-17.4h1.6l-6.7,17.4H157.3z" />
+                <path d="M172.2,105.5l-6.5-17.4h1.6l6.5,17.4H172.2z" />
+                <path d="M194.1,105.5l6.7-17.4h1.6l-6.7,17.4H194.1z" />
+                <path d="M263.4,105.5l6.7-17.4h1.6l-6.7,17.4H263.4z" />
+                <path d="M318.9,105.5l-6.5-17.4h1.6l6.5,17.4H318.9z" />
+                <path d="M395.4,86.5v24h-1.6v-24H395.4z" />
+                <path d="M409.1,105.5l-6.5-17.4h1.6l6.5,17.4H409.1z" />
+                <path d="M498.7,105.5l-6.5-17.4h1.6l6.5,17.4H498.7z" />
+                <path d="M525.8,105.5l6.7-17.4h1.6l-6.7,17.4H525.8z" />
+                <path d="M614,86.5v24h-1.6v-24H614z" />
+                <path d="M711.3,86.5v24h-1.6v-24H711.3z" />
+                <path d="M740.3,105.5l-6.5-17.4h1.6l6.5,17.4H740.3z" />
+                <path d="M760.9,86.5v24h-1.6v-24H760.9z" />
+                <path d="M32,115.3v24h-1.6v-24H32z" />
+                <path d="M39.2,134.3l6.7-17.4h1.6l-6.7,17.4H39.2z" />
+                <path d="M145.6,134.3l-6.5-17.4h1.6l6.5,17.4H145.6z" />
+                <path d="M147.1,134.3l6.7-17.4h1.6l-6.7,17.4H147.1z" />
+                <path d="M182.3,134.3l-6.5-17.4h1.6l6.5,17.4H182.3z" />
+                <path d="M183.9,134.3l6.7-17.4h1.6l-6.7,17.4H183.9z" />
+                <path d="M253.2,134.3l6.7-17.4h1.6l-6.7,17.4H253.2z" />
+                <path d="M329.1,134.3l-6.5-17.4h1.6l6.5,17.4H329.1z" />
+                <path d="M395.4,115.3v24h-1.6v-24H395.4z" />
+                <path d="M419.3,134.3l-6.5-17.4h1.6l6.5,17.4H419.3z" />
+                <path d="M508.9,134.3l-6.5-17.4h1.6l6.5,17.4H508.9z" />
+                <path d="M510.5,134.3l6.7-17.4h1.6l-6.7,17.4H510.5z" />
+                <path d="M614,115.3v24h-1.6v-24H614z" />
+                <path d="M628.1,135.1v1.2h-12v-1.2H628.1z" />
+                <path d="M640.1,135.1v1.2h-12v-1.2H640.1z" />
+                <path d="M715,115.3v24h-1.6v-24H715z" />
+                <path d="M759.2,134.3l-6.5-17.4h1.6l6.5,17.4H759.2z" />
+                <path d="M764.5,115.3v24h-1.6v-24H764.5z" />
+              </g>
             </svg>
           </a>
         </div>
