--- a/index.html
+++ b/index.html
@@ -1,7 +1,35 @@
 <html>
   <head>
+    <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap" rel="stylesheet">
     <title>OVERKILL</title>
     <style>
+      a {text-decoration: none;}
+      a {color:black}
+      body {
+        font-family: 'Fredoka One', cursive;
+        line-height: 0.2;
+        color: #111;
+        font-size: 1.6rem;
+        text-decoration: none;
+      }
+      .container {
+        text-align: center;
+        text-decoration: none;
+      }
+      .prvideo {
+        margin-top:30%;
+        text-decoration: none;
+      }
+      .drugideo {
+        margin-top:80%;
+      }
+      .part3 {
+        margin-top:30%;
+      }
+      .cetvrtideo {
+        margin-top: 80%;
+      }
+
       .section-a .container {
         display: grid;
         grid-template-columns: repeat(3, 1fr);
@@ -10,13 +38,6 @@
         /*justify-content: center;*/
       }
 
-      .part1 {
-        width: 45%;
-        min-width: 160px;
-        margin-left: auto;
-        margin-right: auto;
-        margin-top: 40%;
-      }
       .prvideo:hover {
         transform: scale(1.2);
         -webkit-transform: scale(1.2);
@@ -27,7 +48,7 @@
         -webkit-transform: scale(1.2);
         -ms-transform: scale(1.2);
       }
-      .trecideo:hover {
+      .part3:hover {
         transform: scale(1.2);
         -webkit-transform: scale(1.2);
         -ms-transform: scale(1.2);
@@ -71,23 +92,6 @@
         }
       }
 
-      .part3 {
-        width: 65%;
-        min-width: 200px;
-        margin-top: 40%;
-        margin-left: auto;
-        margin-right: auto;
-      }
-
-      .drugideo {
-        margin-top: 95%;
-      }
-      .cetvrtideo {
-        width: 58%;
-        min-width: 120px;
-        margin-top: 70%;
-        margin-left: 40;
-      }
 
       @media (max-width: 1000px) {
         .part1 {
@@ -117,116 +121,15 @@
         <div class="part1">
           <div class="prvideo">
             <a href="shop.html">
-              <?xml version="1.0" encoding="utf-8"?>
-              <!-- Generator: Adobe Illustrator 21.1.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
-              <svg
-                version="1.1"
-                id="Layer_1"
-                xmlns="http://www.w3.org/2000/svg"
-                xmlns:xlink="http://www.w3.org/1999/xlink"
-                x="0px"
-                y="0px"
-                viewBox="0 0 128 37"
-                style="enable-background: new 0 0 128 37"
-                xml:space="preserve"
-              >
-                <style type="text/css">
-                  .st0 {
-                    fill: #0000ff;
-                  }
-                </style>
-                <path class="st0" d="M46.8,6" />
-                <g>
-                  <circle class="st0" cx="54.8" cy="21.6" r="5.4" />
-                </g>
-                <path class="st0" d="M119.5,21.1" />
-                <polygon
-                  points="14.4,13.2 13.3,18.5 16.5,18.5 11.2,25 12.2,20.7 9,20.7 "
-                />
-                <path class="st0" d="M8.5,15.2" />
-                <path class="st0" d="M13.9,20.5" />
-                <circle cx="79.7" cy="18" r="9.7" />
-                <polygon
-                  points="43.9,27.7 63.2,27.7 63.2,27.4 59.6,18 63.2,8.6 63.2,8.3 43.8,8.3 43.8,8.4 47.5,18 "
-                />
-                <polygon
-                  points="114.6,8.7 95.2,8.7 95.2,28.1 110.9,28.1 110.9,18.4 "
-                />
-                <g>
-                  <path
-                    d="M37.1,12.3c-0.3-1.1-0.9-2-1.9-2.7c-0.9-0.7-2-1.1-3.2-1.4c-1.2-0.2-2.4-0.2-3.6,0c-1.3,0.2-2.3,0.7-3.2,1.3
-                      c-0.4,0.3-0.8,0.6-1.1,1c-0.3,0.4-0.6,0.8-0.7,1.3c-0.3,0.9-0.3,1.9,0.1,3c0.5,1.1,1.7,2.1,3.6,2.9l5.6,1.6
-                      c1.2,0.3,2.2,0.8,2.9,1.4c0.7,0.6,1.2,1.3,1.6,2.1c0.3,0.8,0.3,1.7,0,2.6c-0.3,0.9-0.9,1.6-1.8,2.3c-0.8,0.6-1.9,1.1-3.2,1.3
-                      c-1.2,0.2-2.4,0.2-3.6,0c-1.2-0.2-2.3-0.7-3.2-1.4c-0.9-0.6-1.5-1.3-1.8-2.1l-0.7-1.6L37.1,12.3z"
-                  />
-                </g>
-              </svg>
+              <h1>Shop</h1>
             </a>
           </div>
-          <a href="about.html">
             <div class="drugideo">
-              <?xml version="1.0" encoding="utf-8"?>
-              <!-- Generator: Adobe Illustrator 21.1.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
-              <svg
-                version="1.1"
-                id="Layer_1"
-                xmlns="http://www.w3.org/2000/svg"
-                xmlns:xlink="http://www.w3.org/1999/xlink"
-                x="0px"
-                y="0px"
-                viewBox="0 0 149 31"
-                style="enable-background: new 0 0 149 31"
-                xml:space="preserve"
-              >
-                <style type="text/css">
-                  .st0 {
-                    fill: #050505;
-                  }
-                </style>
-                <g>
-                  <polygon class="st0" points="38,26 27.8,5.5 17.6,26 	" />
-                </g>
-                <g>
-                  <rect
-                    x="43.8"
-                    y="5.5"
-                    class="st0"
-                    width="15.1"
-                    height="20.5"
-                  />
-                </g>
-                <path class="st0" d="M50.8,5" />
-                <g>
-                  <circle class="st0" cx="58.8" cy="20.6" r="5.4" />
-                </g>
-                <g>
-                  <circle class="st0" cx="58.8" cy="10.9" r="5.4" />
-                </g>
-                <g>
-                  <circle class="st0" cx="79.5" cy="15.6" r="10.2" />
-                </g>
-                <g>
-                  <path
-                    class="st0"
-                    d="M115.5,5.5H95.2v10.2c0,0,0,0,0,0s0,0,0,0v0.6h0c0.3,5.2,4.7,9.4,10.1,9.4c5.4,0,9.8-4.1,10.1-9.4h0V5.5z"
-                  />
-                </g>
-                <g>
-                  <polygon
-                    class="st0"
-                    points="121.3,19.9 123.5,19.9 123.5,26 139.1,26 139.1,22.1 141.4,22.1 141.4,5.5 121,5.5 121,19.9 	"
-                  />
-                </g>
-                <path class="st0" d="M123.5,20.1" />
-                <polygon
-                  class="st0"
-                  points="10.4,14.2 9.3,19.5 12.5,19.5 7.2,26 8.2,21.7 5,21.7 "
-                />
-                <path class="st0" d="M12.5,14.2" />
-                <path class="st0" d="M17.9,19.5" />
-              </svg>
+              <a href="about.html">
+              <h1>About</h1>
+            </a>
             </div>
-          </a>
+          
         </div>
         <div class="part2">
           <?xml version="1.0" encoding="utf-8"?>
@@ -409,119 +312,18 @@
             </g>
           </svg>
         </div>
+        <div clas="treci deo">
         <div class="part3">
           <a href="contact.html">
-            <div class="trecideo">
-              <?xml version="1.0" encoding="utf-8"?>
-              <!-- Generator: Adobe Illustrator 21.1.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
-              <svg
-                version="1.1"
-                id="Layer_1"
-                xmlns="http://www.w3.org/2000/svg"
-                xmlns:xlink="http://www.w3.org/1999/xlink"
-                x="0px"
-                y="0px"
-                viewBox="0 0 196 27"
-                style="enable-background: new 0 0 196 27"
-                xml:space="preserve"
-              >
-                <g>
-                  <circle cx="51.5" cy="13.5" r="10.5" />
-                </g>
-                <g>
-                  <polygon
-                    points="94.8,17.8 97,17.8 97,24 113,24 113,20 115.4,20 115.4,3 94.5,3 94.5,17.8 	"
-                  />
-                </g>
-                <path d="M95.5,18.1" />
-                <polygon
-                  points="10.4,9.2 9.3,14.5 12.5,14.5 7.2,21 8.2,16.7 5,16.7 "
-                />
-                <path d="M8.5,12.2" />
-                <path d="M13.9,17.5" />
-                <polygon
-                  points="80.1,3 80.1,4.8 78.9,3 68,3 68,24 74.9,24 74.9,22.3 76,24 89,24 89,3 "
-                />
-                <path
-                  d="M27,3L27,3c-5.6,0.3-10,4.9-10,10.5c0,5.6,4.4,10.2,10,10.5v0h7V3H27z"
-                />
-                <polygon points="121,24 131,3 142,24 " />
-                <path
-                  d="M155,3L155,3c-5.6,0.3-10,4.9-10,10.5c0,5.6,4.4,10.2,10,10.5v0h7V3H155z"
-                />
-                <g>
-                  <polygon
-                    points="168.8,17.8 171,17.8 171,24 187,24 187,20 189.4,20 189.4,3 168.5,3 168.5,17.8 	"
-                  />
-                </g>
-              </svg>
-            </div>
+            <h1> Contact </h1>
           </a>
-          <a href="blog.html">
+            </div>       
+          
           <div class="cetvrtideo">
-            <?xml version="1.0" encoding="utf-8"?>
-            <!-- Generator: Adobe Illustrator 21.1.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
-            <svg
-              version="1.1"
-              id="Layer_1"
-              xmlns="http://www.w3.org/2000/svg"
-              xmlns:xlink="http://www.w3.org/1999/xlink"
-              x="0px"
-              y="0px"
-              viewBox="0 0 190 53"
-              style="enable-background: new 0 0 190 53"
-              xml:space="preserve"
-            >
-              <g>
-                <rect x="13" y="10.2" width="23.6" height="34.5" />
-                <path
-                  d="M36.1,10.7v33.5H13.5V10.7H36.1 M37.1,9.7H12.5v35.5h24.6V9.7L37.1,9.7z"
-                />
-              </g>
-              <g>
-                <polygon
-                  points="58.7,44.8 58.7,10.2 70,10.2 70,15.5 92.1,15.5 92.1,44.8 	"
-                />
-                <path
-                  d="M69.5,10.7V15v1h1h21.1v28.3H59.2V10.7H69.5 M70.5,9.7H58.2v35.5h34.4V15H70.5V9.7L70.5,9.7z"
-                />
-              </g>
-              <g>
-                <path
-                  d="M118.4,44.8c-9.2,0-16.7-7.7-16.7-17.3c0-9.5,7.5-17.3,16.7-17.3s16.7,7.7,16.7,17.3C135.1,37,127.6,44.8,118.4,44.8z"
-                />
-                <path
-                  d="M118.4,10.7c8.9,0,16.2,7.5,16.2,16.8s-7.3,16.8-16.2,16.8s-16.2-7.5-16.2-16.8S109.5,10.7,118.4,10.7 M118.4,9.7
-                    c-9.5,0-17.2,7.9-17.2,17.8s7.7,17.8,17.2,17.8c9.5,0,17.2-7.9,17.2-17.8S127.9,9.7,118.4,9.7L118.4,9.7z"
-                />
-              </g>
-              <g>
-                <ellipse cx="37.1" cy="18.6" rx="8.1" ry="8.4" />
-                <path
-                  d="M37.1,10.7c4.2,0,7.6,3.5,7.6,7.9s-3.4,7.9-7.6,7.9s-7.6-3.5-7.6-7.9S32.9,10.7,37.1,10.7 M37.1,9.7c-4.7,0-8.6,4-8.6,8.9
-                    c0,4.9,3.8,8.9,8.6,8.9s8.6-4,8.6-8.9C45.7,13.7,41.9,9.7,37.1,9.7L37.1,9.7z"
-                />
-              </g>
-              <g>
-                <ellipse cx="37.1" cy="36.4" rx="8.1" ry="8.4" />
-                <path
-                  d="M37.1,28.5c4.2,0,7.6,3.5,7.6,7.9s-3.4,7.9-7.6,7.9s-7.6-3.5-7.6-7.9S32.9,28.5,37.1,28.5 M37.1,27.5c-4.7,0-8.6,4-8.6,8.9
-                    s3.8,8.9,8.6,8.9s8.6-4,8.6-8.9S41.9,27.5,37.1,27.5L37.1,27.5z"
-                />
-              </g>
-              <g>
-                <path
-                  d="M160.9,44.8c-9.2,0-16.7-7.7-16.7-17.3c0-9.5,7.5-17.3,16.7-17.3h13.9l-6,17.3l-0.4-0.8v1.9l-0.2,0.6h0.2v3.8h3.3l-2-3.8
-                    h5.3l0.1,15.4H160.9z"
-                />
-                <path
-                  d="M174.1,10.7L168,28.5l-0.1,0.2v0.2v3.8v1h1h2h1.7l-0.8-1.5l-1.2-2.3h4l0.1,14.4h-13.7c-8.9,0-16.2-7.5-16.2-16.8
-                    s7.3-16.8,16.2-16.8H174.1 M175.5,9.7h-14.6c-9.5,0-17.2,7.9-17.2,17.8s7.7,17.8,17.2,17.8h14.7l-0.1-16.4h-6.7l2,3.8h-2v-3.8
-                    L175.5,9.7L175.5,9.7z"
-                />
-              </g>
-            </svg>
+          <a href="blog.html">
+           <h1> Blog </h1>
           </a>
+           </div>    
           </div>
         </div>
       </div>
