--- a/skull.html
+++ b/skull.html
@@ -1,10 +1,21 @@
 <html>
   <head>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap"
+      rel="stylesheet"
+    />
     <title>overkillshop</title>
     <style>
+      body {
+        font-family: "Fredoka One", cursive;
+        line-height: 0.2;
+        color: #111;
+        font-size: 1.6rem;
+        text-decoration: none;
+      }
       .shop {
-        margin: auto;
-        width: 14%;
+        text-align:center;
+        margin-top:2%;
       }
       .section2 {
         margin-top: 5%;
@@ -55,50 +66,7 @@
   <body>
     <section class="section1">
       <div class="shop">
-        <?xml version="1.0" encoding="utf-8"?>
-        <!-- Generator: Adobe Illustrator 21.1.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
-        <svg
-          version="1.1"
-          id="Layer_1"
-          xmlns="http://www.w3.org/2000/svg"
-          xmlns:xlink="http://www.w3.org/1999/xlink"
-          x="0px"
-          y="0px"
-          viewBox="0 0 128 37"
-          style="enable-background: new 0 0 128 37"
-          xml:space="preserve"
-        >
-          <style type="text/css">
-            .st0 {
-              fill: #0000ff;
-            }
-          </style>
-          <path class="st0" d="M46.8,6" />
-          <g>
-            <circle class="st0" cx="54.8" cy="21.6" r="5.4" />
-          </g>
-          <path class="st0" d="M119.5,21.1" />
-          <polygon
-            points="14.4,13.2 13.3,18.5 16.5,18.5 11.2,25 12.2,20.7 9,20.7 "
-          />
-          <path class="st0" d="M8.5,15.2" />
-          <path class="st0" d="M13.9,20.5" />
-          <circle cx="79.7" cy="18" r="9.7" />
-          <polygon
-            points="43.9,27.7 63.2,27.7 63.2,27.4 59.6,18 63.2,8.6 63.2,8.3 43.8,8.3 43.8,8.4 47.5,18 "
-          />
-          <polygon
-            points="114.6,8.7 95.2,8.7 95.2,28.1 110.9,28.1 110.9,18.4 "
-          />
-          <g>
-            <path
-              d="M37.1,12.3c-0.3-1.1-0.9-2-1.9-2.7c-0.9-0.7-2-1.1-3.2-1.4c-1.2-0.2-2.4-0.2-3.6,0c-1.3,0.2-2.3,0.7-3.2,1.3
-                      c-0.4,0.3-0.8,0.6-1.1,1c-0.3,0.4-0.6,0.8-0.7,1.3c-0.3,0.9-0.3,1.9,0.1,3c0.5,1.1,1.7,2.1,3.6,2.9l5.6,1.6
-                      c1.2,0.3,2.2,0.8,2.9,1.4c0.7,0.6,1.2,1.3,1.6,2.1c0.3,0.8,0.3,1.7,0,2.6c-0.3,0.9-0.9,1.6-1.8,2.3c-0.8,0.6-1.9,1.1-3.2,1.3
-                      c-1.2,0.2-2.4,0.2-3.6,0c-1.2-0.2-2.3-0.7-3.2-1.4c-0.9-0.6-1.5-1.3-1.8-2.1l-0.7-1.6L37.1,12.3z"
-            />
-          </g>
-        </svg>
+        <h1>Shop</h1>
       </div>
     </section>
     <section class="section2">
