--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <html>
   <head>
-    <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Rubik+Mono+One&display=swap" rel="stylesheet">
     <title>OVERKILL</title>
     <style>
       a {text-decoration: none;}
       a {color:black}
       body {
-        font-family: 'Fredoka One', cursive;
+        font-family: 'Rubik Mono One', sans-serif;
         line-height: 0.2;
         color: #111;
         font-size: 1.6rem;
