--- a/dwarven.html
+++ b/dwarven.html
@@ -44,7 +44,7 @@
       }
       .button {
         width: 20%;
-        margin-top: 22%;
+        margin-top: 16%;
         margin-left: 2%;
       }
       .button:hover {
@@ -179,7 +179,10 @@
           <h1>3D Printed: SLA Technology</h1>
           <h1>Material: Grey UV Resin 405nm</h1>
         </div>
-        
+        <div class="more_images">
+          <a href="https://imgur.com/a/1KgRraJ">More images</a>
+        </div>
+
         <div class="button">
           <a href="https://forms.gle/idxxgoeSx29uGjRX7">
             <?xml version="1.0" encoding="utf-8"?>
